syntax = "proto3";

option go_package = "v1";

option java_package = "stackrox.generated";

import weak "google/api/annotations.proto";
import "api/v1/empty.proto";

package v1;

// Access values should be in escalating order. IE READ_WRITE means you have READ as well.
enum Access {
    READ_PERMISSION = 0;
    READ_WRITE_PERMISSION = 1;
}

message Permission {
    string resource = 1;
    Access access = 2;
}

message Role {
    string name = 1;
    bool all_access = 2;

    map<string, Permission> resource_to_permission = 3;
}

message GetRolesResponse {
    repeated Role roles = 1;
}

service RoleService {

    rpc GetRoles (Empty) returns (GetRolesResponse) {
        option (google.api.http) = {
            get: "/v1/roles"
        };
    }

}
